public/stylesheets/xaas.css
/* Text */
body{
    font-family: 'Roboto', sans-serif;
    font-size: 1.05rem;
    line-height: 1.9rem;
}
h1, h2, h3, h4, h5, h6, .card-title{
    font-family: 'Roboto Slab', "Helvetica", sans-serif;
    letter-spacing: 0.75px;
}
.h1, .h2, .h3, .h4, .h5, .h6,
h1, h2, h3, h4, h5, h6{
    font-weight: normal;
    margin: 0px;
    margin-bottom: 10px;
}
h5{
    font-size: 1.2rem;
}
.h3, h3{
    line-height: 33px;
}
#content-title h4 {
    font-size: 1.5rem;
}
.jumbotron h1{
    margin-top: 0px;
    margin-bottom: 5px;
}
.label{
    padding: .2em .0em .8em;
    font-size: 1rem;
    font-weight: normal;
    line-height: 1;
    text-align: left;
}

/*a:focus, a:hover{*/
    /*color: #3498db;*/
}

span.capitalize{
    text-transform: capitalize;
}

/* layouts */
.main {
    min-height: 80vh;
}
.main .section {
    padding: 60px 0px;
}

.section-heading {
    position: relative;
    margin-bottom: 60px;
    width: auto;
    text-align: center;
}

.section-heading:after {
    content: "";
    width: 170px;
    border-bottom: 6px solid black;
    position: absolute;
    left: 50%;
    bottom: -24px;
    transform: translateX(-50%);
}

.page-service-instance{
    padding:30px 45px;
}

/* forms */
.form-control, .custom-file-control{
    color: rgba(0, 0, 0, 0.80);
}
.form-control.has-error{
    border-color: #a94442;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
}

.radio label, .is-focused .radio label, .radio-inline, .is-focused
.radio-inline, .checkbox label, .is-focused
.checkbox label, .checkbox-inline, .is-focused
.checkbox-inline, .switch label, .is-focused
.switch label{
    color: rgba(0, 0, 0, 0.80);
}

/* data-form */
#form-debug-json{
    display: none;
}

/* system settings page */
.system-settings-group{
    margin-bottom: 20px;
}

/* service instance / details page */
#service-instance-description{
    min-height: 300px;
}
.instance-details{
    margin-bottom: 15px;
}
.instance-details-toggle{
    text-align: right;;
}
.page-service-instance .page-on-top>div {
}
#payment-plan-box, #instance-owner{
    border: 1px solid #ccc;
    border-radius: 5px;
    padding: 20px;
}
.payment-plan-fields{
    margin-bottom: 7px;
    text-transform: capitalize;
}
#instance-owner{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 10px;
}
#instance-owner i{
    margin-right: 7px;
}

/* service details table */
table td.service-description{
    min-width: 300px;
}
table td.service-type, table td.service-billing-date, table td.service-price{
    min-width: 150px;
}
table th.permission-width{
    width: 60% !important;
}
.dataTables_filter input::-webkit-input-placeholder {
    font-size: 13px;
}
select.form-control:not([size]):not([multiple]), select.custom-file-control:not([size]):not([multiple]) {
    height: 2.444444444em;
}
/* service comment */
span.comment-message {
    background-color: #e4e4e4;
    color: #0d47a1;
    padding: 3px 15px;
    border-radius: 15px;
    display: inline-block;
}
.comments {
    padding: 20px 0px;
}
.comments-list{
    padding-left: 0px;
    list-style: none;
}
.comment{
    display: flex;
}
.comment-icon {
    min-width: 40px;
    margin-right: 25px;
}
.message-date {
    position: absolute;
    right: 20px;
    color: #c7c7c7;
}
.comments li {
    padding: 5px 0px 13px;
}
.comments .media-body, .media-left, .media-right {
    display: flex;
    flex-direction: column;
}

/* service action block */
.service-block, p.catalog-description {
    padding-top: 25px;
    padding-bottom: 20px;
    border-top: 1px dashed #c7c7c7;
}
.service-block:last-child{
    /*border-bottom: 1px dashed #c7c7c7;*/
}
.service-field-block {
    border-bottom: none;
}
/* service details */
.front-line {
    width: 80%;
    height: 5px;
    top: -16px;
    left: 8px;
    position: absolute;
    -webkit-transform: skew(45deg);
    -moz-transform: skew(45deg);
    -o-transform: skew(45deg);
    background: #0d47a1;
}
.front-line2 {
    width: 80%;
    height: 3px;
    margin-left: 4px;
    top: -11px;
    left: 8px;
    position: absolute;
    -webkit-transform: skew(45deg);
    -moz-transform: skew(45deg);
    -o-transform: skew(45deg);
    background: #0091ea;
}

/* font */
.bold{
    font-weight: bold;
}

/* modal */
.modal{
    display: block;
}
.modal.modal-success .modal-header{
    background-color: #54b759 !important;
}


/* cards */
.card-top-icon{
    width: 100%;
    height: 76px;
}
.card-top-icon img{
    height: 42px;
    width: auto;
    margin: 17px;
}
.card-top-icon i{
    font-size: 3em;
    padding: 17px;
}
.card-top-icon.dark i{
    color: #fff;
}

span.one-time-charge-label {
    font-size: 0.7em;
    margin-left: 8px;
}

/*buttons*/
.btn-primary-important{
    color: #ffffff !important;
    border-width: 1px !important;
    border-color: #0091ea !important;
    background-color: #0091ea !important;
}
.btn-danger-important{
    color: #ffffff !important;
    border-width: 1px !important;
    border-color: #fd4921 !important;
    background-color: #fd4921 !important;
}
.btn.btn-success{
    /*background-color: #54b759 !important;*/
}
.btn.btn-request-service{
    background-color: #eeeeee !important;
}
.fileUpload {
    position: relative;
    overflow: hidden;
    margin: 10px;
}
.fileUpload input.upload {
    position: absolute;
    top: 0;
    right: 0;
    margin: 0;
    padding: 0;
    font-size: 20px;
    cursor: pointer;
    opacity: 0;
    filter: alpha(opacity=0);
}

/* background-colors */
.bg-wordpress{
    background-color: #4ca6cf;
}
.bg-drupal{
    background-color: #0678BE;
}
.bg-woocommerce{
    background-color: #96588a;
}
.bg-android{
    background-color: #A4C639;
}
.bg-apple{
    background-color: rgb(0,122,255);
}
.bg-primary{
    background-color: #0d47a1;
}




/* service template form review */
#review-content .label{
    color: #212121;
}

/* user profile page */
.edit-profile-image{
    text-align: center;
    padding: 30px;
}

.edit-profile-image .badge{
    margin-bottom: 15px;
}
.edit-profile-image button{
    margin-top: 7px;
}
.profile-header{
    display: flex;
    justify-content: space-between;
}
.profile-info, .profile-info *{
    text-align: center;
}
.profile-info>div{
    margin-bottom: 45px;
}
.profile-info small{
    display: block;
    margin-top: 5px;
    margin-bottom: 15px;
}
.profile-info small, .profile-header small{
    color: #a0a0a0;
}

/* service listing page */
.page-all-services .icon-heading{
    margin-bottom: 50px;
}
.category-filter .form-group {
    display: flex;
    margin: 4px 0px;
}
.category-filter label {
    width: 35%;
    text-align: right;
    padding-right: 15px;
}
.category-filter .form-control {
    width: 65%;
}

/* service request page */
.service-icon{
    width: 50px;
    float: left;
}
.service-icon.small{
    padding-top: 1px;
    margin-left: 5px;
    width: 25px;
}

.icon-heading *{
    text-transform: uppercase;
    font-weight: bold;
}
.icon-heading img{
    margin-right: 30px;
}

/* dashboard */
.dashboard-search-label{
    margin-right: 10px;
    font-size: 1rem;
    font-weight: normal;
}
.dashboard-charts{
    padding: 30px 15px;
    border: 1px solid #efefef;
    border-radius: 5px;
    margin: 30px 0px;
}

/* manage catalog page */
.catalog-item-description{
    display: block;
    max-width: 500px;
    max-height: 38px;
    text-overflow: ellipsis;
    overflow: hidden;
}
#tables-datatable .dropdown-menu .dropdown-item{
    padding-right: 1rem;
    padding-left: 1rem;
    min-height: 1rem;
    width: auto;
}
#tables-datatable {
    /*margin-top: -33px;*/
}
.data-table-search label{
    margin-right:10px;
    width: 170px;
}
.data-table-search {
    float: right;
    margin-bottom: 15px;
    display: flex;
    align-items: baseline;
}
.datatable thead th {
    position: relative;
}
.datatable th.sorted:after {
    font-family: FontAwesome;
    content: "\f0d8";
    padding-left: 10px;
    position: absolute;
    right: 10px;
}
.datatable th.sorted.desc:after {
    content: "\f0d7";
}
.datatable #action-buttons{
    float: right;
    margin-left: 5px;
}

/* crete template form */
#service-basic-info, #service-payment-info, #service-custom-props{
    background-color: #fff;
}

/* service request page */
.service-request-details, .service-request-form{
    padding: 15px;
}
.service-request-form {
    border: 1px solid #f1f1f1;
    border-radius: 3px;
}
.service-request-form label {
    font-weight: normal;
    color: #454545;
}
.service-request-form .form-control {
    border-color: #F0F0F0;
}

/* loader animation */
.loading {
    border: 2px solid #f3f3f3; /* Light grey */
    border-top: 2px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 20px;
    height: 20px;
    animation: spin 1s linear infinite;
}
.loading.done{
    display: none;
}
.loader p.loading{
    display: none;
}


/* React Transitions */
.fade-enter{
    opacity: 0;
}
.fade-enter.fade-enter-active{
    opacity: 1;
    transition: all 200ms ease-out ;
}
.fade-leave{
    opacity: 1;
}
.fade-leave.fade-leave-active{
    opacity: 0;
    transition: all 200ms ease-out;
}
.fade-appear {
    opacity: 0.01;
}
.fade-appear.fade-appear-active {
    opacity: 1;
    transition: all 400ms ease-in;
}

/* 404 page */
.page-404 {
    background-color: #2a90ce;
}

.not-found-404 {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.not-found-404 > * {
    margin: 30px;
}
.page-404-logo {
    text-align: center;
    padding: 60px 0px 10px;
}

.page-404-logo img {
    max-height: 80px;
}

.not-found-404 h1 {font-size: 13em;}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

/* featured */
.featured{
    position: relative;
    height:auto;
    min-height: 660px;
    margin-top: -90px;
    padding-top: 90px;
    text-align: center;
}
.featured > * {
    position: relative;
}
.featured-image {
    position: absolute !important;
    top: 0px;
    height: 100%;
    width: 100%;
}
.featured-icon{
    max-width: 70px;
    margin: 100px auto 60px;
    height: auto;
}
.featured-title, .featured-body, .featured-price{
    color: #ffffff;
    text-align: center;
    margin: 25px auto;
}
.featured-title, .featured-price {
    font-size: 36px;
}
.featured-body {
    font-size: 16px;
}
/*.featured-price{*/
    /*padding-bottom: 120px;*/
/*}*/

/* footer */
.footer {
    position: relative;
    padding: 20px 0px;
    width: 100%;
    text-align: center;
    color: #b1b1b1;
    font-size: 0.7rem;
    background-color: #000;
}
body.login .footer{
    /*position: absolute;*/
    /*bottom: 0px;*/
    position: relative;
    bottom: 0px;
    margin-top: 50px;
}

/* sign up */
.agreement-checkbox.checkbox input.form-control {
    margin-top: 4px;
    width: auto;
    height: auto;
}
.agreement-checkbox.checkbox label{
    padding-left: 20px;
    margin-bottom: 20px;
}
.copyright{
    margin-top: 50px;
    color: #a2a2a2;
    font-size: 0.8em;
    text-align: center;
}
.powerby{
    color: white;
}
.powerby-servicebot{
    color: white;
}
.powerby-servicebot:hover{
    color: whitesmoke;
}

/* desktops only */
/* top navigation bar */
@media (min-width: 769px){
    .navbar .navbar-left-icons{
        flex: 0 0 70px;
    }
    .service-detail-block{
        top: 35px;
        right: 20px;
    }
    .page-on-top.service-detail{
        padding: 0px !important;
    }
    #create-new-service, .data-table-top-button{
        position: absolute;
    }
}
/* iPad or smaller */
@media (max-width: 768px){
    #datatable-example-2_filter{
        position: absolute;
        top: 0px;
        right: -61px;
    }
    #tables-datatable{
        overflow-y: hidden;
        -ms-overflow-style: -ms-autohiding-scrollbar;
    }
    .nav.nav-inline.navbar-left-icons{
        display: block;
    }
}


#content-title{
    display: none;
}

